assets/css/assessment.css
/* BODY START */
/* Universal Selector */
* {
    margin: 0;
    padding: 0;
}

body {
    width: 1920px;

    font-family: "Helvetica";
    background-color: #F7F7F7;
}
/* END BODY */

/* HEADER START */
header {
    width: 100%;
    height: 100px;

    background-color: rgb(255, 255, 255);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.back-btn p {
    font-family: Roboto;
    font-style: medium;
    font-size: 22px;
}

.title-box {
    position: absolute;
    width: 220px;
    height: 45px;
    left: 837px;
    top: 25px;
}

.title {
    padding: 5px 5px;

    font-family: Ubuntu;
    font-style: regular;
    font-weight: bold;
    font-size: 32px;
    text-align: center;
    text-decoration: none;

    border-radius: 5px;
    border: 2px solid #1663BE;
    
    color: #1663BE; 
}
/* HEADER END */

/* START ASSESSMENT BODY SECTION  */
/* container */
.container {
    position: relative;
    width: 1100px;
    height: 500px;
    top: 100px;;
    margin: auto;

    border: .5px solid #D3D3D3; 
    border-radius: 5px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.slide-container {
    position: absolute;
    display: none;
    top: 40px;
    width: 900px;
    padding: 0 40px;
    margin: 0 auto;

    text-align: center;
}

.prev, .next {
    position: absolute;
    width: auto;
    top: 50%;
    margin-top: -22px;  
    padding: 16px;

    font-weight: bold;
    font-size: 28px;

    border-radius: 0 3px 3px 0;

    color: #1663BE;
    transition: 0.6s ease;
    cursor: pointer;
    user-select: none;
}

/* Position the "next button" to the right */
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}
  
/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
    color: white;
    background-color: rgba(4, 4, 4, 0.8);
}

.numberquestion {
    border: 1px solid red;
    margin: 0 auto;
    margin-bottom: 20px;
    padding: 8px 0;
    
    font-family: 'Trebuchet MS';
    font-size: 25px;
    letter-spacing: 2px;
    text-transform: uppercase;
}

.slide-container label {
    border: 1px solid green;
    font-family: Lato;
    font-size: 35px;
}

input {
    position: fixed;
    top: 220px;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    text-align: center;
    display: block;
    width: 150px;
    height: 30px;
    margin: 20px auto;
}

input.range_20, .range_8, .range_12, .range_50, .range_100 {
    position: absolute;

    display: block;
    width: 400px;
    margin: 20px auto;
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0 10px;
}

output {
    position: relative;
    top: 100px;
}

input:placeholder-shown {
    font-style: italic;
}

.dot {
    position: relative;
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: rgb(43, 163, 255);
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}
  
.active, .dot:hover {
    background-color: #1663BE;
}

/* Fading animation */
.fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
}

@-webkit-keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}

@keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}

.tooltip-text {
    position: absolute;
    top: 50px;
    left: 750px;
    width: 520px;
    padding: 15px;
    z-index: 1;

    text-align: left;

    background-color: black;
    color: #fff;
    border-radius: 6px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  
    visibility: hidden;
    opacity: 0.8;
}

.slide-container:hover .tooltip-text {
    visibility: visible;
    transform: translate3d(0,-10px,0);
    transition: all .3s ease-in-out;
}

/* END ASSESSMENT BODY SECTION */

